Создано с помощью Colaboratory

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyObhEtA/XWMJ4bJ7pWipi1p",
+      "authorship_tag": "ABX9TyM1OLZmadDXDSXDQJ9UDWbz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8370,6 +8370,32 @@
           },
           "metadata": {},
           "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "1+1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3fT9NL-mO1Cz",
+        "outputId": "6adc9b61-081f-4eb5-9a0e-7ff4cc61366a"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
         }
       ]
     }
