Создано с помощью Colaboratory

--- a/Untitled7.ipynb
+++ b/Untitled7.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN8omOPj+WzM6zwIlL+cwgJ",
+      "authorship_tag": "ABX9TyO1byEQ0AI+jN+czufvHSAs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "9hO7Y2TiZSuu"
       },
@@ -51,7 +51,7 @@
       "metadata": {
         "id": "eXGLg0dfaSvs"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -67,7 +67,7 @@
         "id": "J83NkJKqar-Z",
         "outputId": "dc16c94e-8da6-46d1-ca4d-8d041d61dc70"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -558,7 +558,7 @@
         "id": "5si_lc_7avPE",
         "outputId": "221963b3-75cc-4d3d-f49c-212da1e8e5b2"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -596,7 +596,7 @@
       "metadata": {
         "id": "c3CHO4LqgMNc"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -612,7 +612,7 @@
         "id": "7PUHW65Aa4f7",
         "outputId": "9c4dbc60-53a3-4f67-c2ae-fb426d532185"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -955,7 +955,7 @@
         "id": "Vb7g9-x7dV_t",
         "outputId": "6ddf57ff-6010-400d-a2a9-5a1564241b31"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -982,7 +982,7 @@
         "id": "Foce6TbaeWiL",
         "outputId": "18e98d60-257f-4dc3-c749-cd09a1648b19"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1014,7 +1014,7 @@
         "id": "-KQ8HZZskqrW",
         "outputId": "cd2b592e-0f74-4578-9fd0-35eef97c842f"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1333,7 +1333,7 @@
       "metadata": {
         "id": "GF7CGPSBnAAU"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1345,7 +1345,7 @@
       "metadata": {
         "id": "DEygK3EFmXwJ"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1361,7 +1361,7 @@
         "id": "nD4-UqNTnTEv",
         "outputId": "c06db82e-6f1b-4e8a-99e8-53522abb84a3"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1861,7 +1861,7 @@
         "id": "FYIWWujbnSNm",
         "outputId": "8623937e-be03-442a-e693-7a99ba22d809"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1895,7 +1895,7 @@
       "metadata": {
         "id": "WpbR5HZOoiR1"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1907,7 +1907,7 @@
       "metadata": {
         "id": "20yPk0hqpBbZ"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1924,7 +1924,7 @@
         "id": "IGKqUAQDEDkA",
         "outputId": "2416a054-361f-46a0-e614-023c968b2821"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1955,7 +1955,7 @@
         "id": "qPwA_4LGEWyG",
         "outputId": "84cf7c32-0977-4f43-f1de-e7407f35e86a"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2694,7 +2694,7 @@
         "id": "bIt93qaaEp0o",
         "outputId": "6bd4ab41-1e3a-491d-8d7b-93930d893d69"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2732,7 +2732,7 @@
         "id": "PRQhVfCSu3Uu",
         "outputId": "25036f81-0936-48f0-e3ea-9e0dbef65846"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2768,7 +2768,7 @@
         "id": "baajA6LvgURR",
         "outputId": "db7b9a8a-bcf0-4ce8-a648-3792fb33f509"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2804,7 +2804,7 @@
         "id": "vEXoRDnM3BRH",
         "outputId": "1ff98406-9528-4b69-df79-70d7b81dd5bd"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2935,7 +2935,7 @@
         "id": "e2yXlsXe2ScY",
         "outputId": "dae8130b-51b3-4d4b-e7e3-d9495be2c78e"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3061,7 +3061,7 @@
         "id": "FmWYBRTFAyry",
         "outputId": "26ffef10-a12b-437c-87de-d56db0df30a9"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3102,7 +3102,7 @@
         "id": "pYCXCic9wBzN",
         "outputId": "4ca088b3-92bd-4784-e19b-cd3719b1230f"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3144,7 +3144,7 @@
       "metadata": {
         "id": "AVfA43XctKTW"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3160,7 +3160,7 @@
         "id": "x9MmUYmftbWV",
         "outputId": "d2875560-e62e-4905-839b-580d4ac09287"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3335,7 +3335,7 @@
         "id": "eYP3Ka19t3Eo",
         "outputId": "41cdcd91-1c41-4dd1-bc78-20db0c641554"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3359,7 +3359,7 @@
         "id": "CA3r3QkEuRMN",
         "outputId": "20d391cb-7a37-454a-bd80-d17d4fcfa254"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3751,7 +3751,7 @@
         "id": "1b1HcDDlwivp",
         "outputId": "6170f05e-5214-4e89-c778-a8cfa2fd27cb"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3828,7 +3828,7 @@
         "id": "OYFlCMytxs4J",
         "outputId": "39e4f4bc-f2a0-4126-db5f-aa025c39e90f"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3853,9 +3853,40 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Задание 6.\n",
+        "#Рассчитать индекс индустрии за последние 20 лет (можно меньше) на основе 10 крупнейших компаний.\n",
+        "#Сравнить динамику индекса и курса акций выбранной компании."
+      ],
       "metadata": {
         "id": "BG7AzWNq25a_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Пример данных о ценах на акции компаний за неделю:\n",
+        "prices = {'Company A': [100, 105, 110, 115, 120], 'Company B': [50, 55, 60, 58, 62], 'Company C': [75, 78, 80, 85, 88],}\n",
+        "#Расчет средних цен на акции за неделю:\n",
+        "weekly_avg_prices = []\n",
+        "for day in range(5):  # Пять дней в неделю\n",
+        "daily_prices = [prices[company][day] for company in prices]\n",
+        "avg_price = sum(daily_prices) / len(daily_prices)\n",
+        "weekly_avg_prices.append(avg_price)\n",
+        "#Расчет индекса (базовое значение индекса 100)\n",
+        "base_index = 100\n",
+        "weekly_index = [base_index]\n",
+        "for i in range(1, len(weekly_avg_prices)):\n",
+        "  index_change = (weekly_avg_prices[i] - weekly_avg_prices[i - 1]) / weekly_avg_prices[i - 1] * 100\n",
+        "  weekly_index.append(weekly_index[-1] + index_change)\n",
+        "# Вывод результатов\n",
+        "for day, index_value in enumerate(weekly_index):\n",
+        "    print(f\"День {day + 1}: Индекс = {index_value:.2f}\")"
+      ],
+      "metadata": {
+        "id": "GIM81aWctkdk"
       },
       "execution_count": null,
       "outputs": []
