Создано с помощью Colaboratory

--- a/Untitled7.ipynb
+++ b/Untitled7.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMhcpZi5e1aqWKeMluwOPA3",
+      "authorship_tag": "ABX9TyOhhJ6Hd7ezQB8rORmQVQer",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5113,38 +5113,77 @@
       "cell_type": "code",
       "source": [
         "for i in symbols:\n",
-        "  print(symbols[i])\n"
+        "  print(i)\n"
       ],
       "metadata": {
-        "id": "piYH2C1SzUDI",
-        "outputId": "159a39b6-3ac2-4703-fe80-d21f5a4479d8",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 477
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "piYH2C1SzUDI",
+        "outputId": "2e616ce0-fdd8-4fb9-e475-9fdbe258e6b6"
       },
-      "execution_count": 86,
+      "execution_count": 91,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "KeyError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3801\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3802\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3803\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32mpandas/_libs/index_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.index.Int64Engine._check_type\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;31mKeyError\u001b[0m: 'OLPX'",
-            "\nThe above exception was the direct cause of the following exception:\n",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-86-665f01b38118>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msymbols\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msymbols\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/series.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    979\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    980\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mkey_is_scalar\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 981\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_value\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    982\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    983\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mis_hashable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/series.py\u001b[0m in \u001b[0;36m_get_value\u001b[0;34m(self, label, takeable)\u001b[0m\n\u001b[1;32m   1087\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1088\u001b[0m         \u001b[0;31m# Similar to Index.get_value, but we do not fall back to positional\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1089\u001b[0;31m         \u001b[0mloc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1090\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_values_for_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1091\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3802\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3803\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3804\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3805\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3806\u001b[0m                 \u001b[0;31m# If we have a listlike key, _check_indexing_error will raise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyError\u001b[0m: 'OLPX'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "OLPX\n",
+            "CASY\n",
+            "WOOF\n",
+            "CHPT\n",
+            "FCFS\n",
+            "EZPW\n",
+            "KPTI\n",
+            "DIBS\n",
+            "PRTY\n",
+            "HOUR\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prices=yf.download(tickers='OLPX', period='10d',interval='1d',group_by='column')['Adj Close']\n",
+        "prices"
+      ],
+      "metadata": {
+        "id": "35wBEFw89rue",
+        "outputId": "11d204bd-185b-48a9-f99d-6fa86ed917d9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\r[*********************100%%**********************]  1 of 1 completed\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Date\n",
+              "2023-10-16    1.67\n",
+              "2023-10-17    1.65\n",
+              "2023-10-18    1.57\n",
+              "2023-10-19    1.57\n",
+              "2023-10-20    1.59\n",
+              "2023-10-23    1.54\n",
+              "2023-10-24    1.63\n",
+              "2023-10-25    1.60\n",
+              "2023-10-26    1.54\n",
+              "2023-10-27    1.45\n",
+              "Name: Adj Close, dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 89
         }
       ]
     },
@@ -5153,7 +5192,7 @@
       "source": [
         "prices = []\n",
         "for i in symbols:\n",
-        "  prices=yf.download(tickers=['symbols'], period='10d',interval='1d',group_by='column')['Adj Close']\n",
+        "  prices=yf.download(tickers=i, period='100d',interval='1d',group_by='column')['Adj Close']\n",
         "prices"
       ],
       "metadata": {
@@ -5161,31 +5200,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zFQ7erVjvfDP",
-        "outputId": "326f8f2e-a6b8-479d-9912-c466c088f07e"
+        "outputId": "c27e7992-1f05-46aa-c662-89354033e0f9"
       },
-      "execution_count": 82,
+      "execution_count": 90,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\r[*********************100%%**********************]  1 of 1 completed"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "ERROR:yfinance:\n",
-            "1 Failed download:\n",
-            "ERROR:yfinance:['SYMBOLS']: Exception('%ticker%: No data found, symbol may be delisted')\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
+            "[*********************100%%**********************]  1 of 1 completed\n",
+            "[*********************100%%**********************]  1 of 1 completed\n",
+            "[*********************100%%**********************]  1 of 1 completed\n",
+            "[*********************100%%**********************]  1 of 1 completed\n",
+            "[*********************100%%**********************]  1 of 1 completed\n",
+            "[*********************100%%**********************]  1 of 1 completed\n",
+            "[*********************100%%**********************]  1 of 1 completed\n",
+            "[*********************100%%**********************]  1 of 1 completed\n",
             "[*********************100%%**********************]  1 of 1 completed"
           ]
         },
@@ -5195,7 +5225,7 @@
           "text": [
             "ERROR:yfinance:\n",
             "1 Failed download:\n",
-            "ERROR:yfinance:['SYMBOLS']: Exception('%ticker%: No data found, symbol may be delisted')\n"
+            "ERROR:yfinance:['PRTY']: Exception('%ticker%: No data found, symbol may be delisted')\n"
           ]
         },
         {
@@ -5203,153 +5233,67 @@
           "name": "stdout",
           "text": [
             "\n",
-            "[*********************100%%**********************]  1 of 1 completed"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "ERROR:yfinance:\n",
-            "1 Failed download:\n",
-            "ERROR:yfinance:['SYMBOLS']: Exception('%ticker%: No data found, symbol may be delisted')\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "[*********************100%%**********************]  1 of 1 completed"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "ERROR:yfinance:\n",
-            "1 Failed download:\n",
-            "ERROR:yfinance:['SYMBOLS']: Exception('%ticker%: No data found, symbol may be delisted')\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "[*********************100%%**********************]  1 of 1 completed"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "ERROR:yfinance:\n",
-            "1 Failed download:\n",
-            "ERROR:yfinance:['SYMBOLS']: Exception('%ticker%: No data found, symbol may be delisted')\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "[*********************100%%**********************]  1 of 1 completed"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "ERROR:yfinance:\n",
-            "1 Failed download:\n",
-            "ERROR:yfinance:['SYMBOLS']: Exception('%ticker%: No data found, symbol may be delisted')\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "[*********************100%%**********************]  1 of 1 completed"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "ERROR:yfinance:\n",
-            "1 Failed download:\n",
-            "ERROR:yfinance:['SYMBOLS']: Exception('%ticker%: No data found, symbol may be delisted')\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "[*********************100%%**********************]  1 of 1 completed"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "ERROR:yfinance:\n",
-            "1 Failed download:\n",
-            "ERROR:yfinance:['SYMBOLS']: Exception('%ticker%: No data found, symbol may be delisted')\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "[*********************100%%**********************]  1 of 1 completed"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "ERROR:yfinance:\n",
-            "1 Failed download:\n",
-            "ERROR:yfinance:['SYMBOLS']: Exception('%ticker%: No data found, symbol may be delisted')\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "[*********************100%%**********************]  1 of 1 completed"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "ERROR:yfinance:\n",
-            "1 Failed download:\n",
-            "ERROR:yfinance:['SYMBOLS']: Exception('%ticker%: No data found, symbol may be delisted')\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n"
+            "[*********************100%%**********************]  1 of 1 completed\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Series([], Name: Adj Close, dtype: float64)"
+              "Date\n",
+              "2023-06-07    1.68\n",
+              "2023-06-08    1.65\n",
+              "2023-06-09    1.67\n",
+              "2023-06-12    1.74\n",
+              "2023-06-13    1.72\n",
+              "              ... \n",
+              "2023-10-23    1.47\n",
+              "2023-10-24    1.40\n",
+              "2023-10-25    1.40\n",
+              "2023-10-26    1.48\n",
+              "2023-10-27    1.41\n",
+              "Name: Adj Close, Length: 100, dtype: float64"
             ]
           },
           "metadata": {},
-          "execution_count": 82
+          "execution_count": 90
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prices"
+      ],
+      "metadata": {
+        "id": "9vHRIdQF9juI",
+        "outputId": "361078df-6fff-418a-9a7f-067dfc138f11",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Date\n",
+              "2023-10-16    1.45\n",
+              "2023-10-17    1.38\n",
+              "2023-10-18    1.46\n",
+              "2023-10-19    1.48\n",
+              "2023-10-20    1.45\n",
+              "2023-10-23    1.47\n",
+              "2023-10-24    1.40\n",
+              "2023-10-25    1.40\n",
+              "2023-10-26    1.48\n",
+              "2023-10-27    1.41\n",
+              "Name: Adj Close, dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 88
         }
       ]
     },
